<resources>
    <string name="app_name"> WFP-Pishin Recruitment Form </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="istatus">انٹروہو کا نتیجہ</string>
    <string name="istatusa"> مکمل</string>
    <string name="istatusb">نا مکمل</string>
    <string name="istatusc">انکار کردیا</string>
    <string name="istatusd">گھر بند ہے</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="male"> مرد</string>
    <string name="female"> عورت </string>
    <string name="yes">  ہاں </string>
    <string name="no">نہیں </string>
    <string name="alive">جيئرو </string>
    <string name="died">مري ويو </string>
    <string name="na"> لاڳو نه آهي </string>
    <string name="dkn"> معلوم نہیں</string>
    <string name="nottaken">نہیں لیا </string>
    <string name="none">کچھ نہیں </string>
    <string name="drem">ياد ناهي </string>
    <string name="dkndrem">خبر ناهي/ياد ناهي</string>
    <string name="kg"> ڪلوگرام </string>
    <string name="kc307rec"> وزن بابت يادگيري ڪرايو </string>
    <string name="weeks"> هفتا </string>
    <string name="days"> دن </string>
    <string name="min"> منٽ </string>
    <string name="hours"> ڪلاڪ </string>
    <string name="cm"> cm </string>
    <string name="grams"> گرام </string>
    <string name="years"> سال </string>
    <string name="age">اندراج کے وقت عمر(سال) </string>
    <string name="yearsago"> کتنے برس پھلے </string>
    <string name="months">مہینے  </string>
    <string name="times"> تعداد </string>
    <string name="nooftimes"> کتنی دفعہ </string>
    <string name="timesd"> ويمن جو تعداد </string>
    <string name="others"> ٻيو ڪجھ وضاحت ڪريو </string>
    <string name="other">دیگر (وضاحت کریں) </string>
    <string name="noone"> ڪو به نه </string>
    <string name="neverb"> نه ونهجاريو </string>
    <string name="sachet">ساشے  </string>
    <string name="healthperson">صحت کے ذمہ دار  </string>
    <string name="otherperson">دیگر افراد </string>
    <string name="spbla01">  تحصیل کا نام </string>
    <string name="spbla02">  یونین کونسل کا نام </string>
    <string name="spbla03">  گاؤں یا علاقہ کا نام </string>
    <string name="spbla03b">  LHW </string>
    <string name="spbla04">  گھر کا نمبر </string>
    <string name="spblacluster">کلسٹر کی قسم </string>
    <string name="spblaclustera"> انٹروینشن  </string>
    <string name="spblaclusterb">  کنٹرول  </string>
        <string name="spbla08"> کیا جوابدہندہ مطالعے میں شامل ہونے کے لیے رضامند ہے؟ </string>
    <string name="wraheading"> شناخت </string>
    <string name="wra01"> انٹرویو لینے والے کا نام </string>
    <string name="wra02"> ضلع کا نام </string>
    <string name="wra03"> تحصیل کا نام </string>
    <string name="wra04"> یونین کونسل کانام </string>
    <string name="wra05"> علاقہ / گاؤں کا نام </string>
    <string name="wra06"> لیڈی ہیلتھ ورکر کا نام </string>
    <string name="wra07"> کلسٹر کی قسم </string>
    <string name="wra07a"> انٹروینشن </string>
    <string name="wra07b"> کنٹرول </string>
    <string name="wrbheading"> خاندان کی معلومات </string>
    <string name="wrb01"> گھر کے افراد کے نام:
گھر کے سربراہ سے شروع کریں. </string>
    <string name="wrb02"> جنس </string>
    <string name="wrb02m"> مرد </string>
    <string name="wrb02f"> عورت </string>
    <string name="wrb03"> پیدائش کی تاریخ
(پانچ سال سے کم عمر کے بچوں کیلئے) </string>
    <string name="wrb033">مہینہ</string>
    <string name="wrb04"> عمر
پانچ سال سے بڑے (مکمل سالوں میں) </string>
    <string name="wrb05"> ازواجی حیثیت </string>
    <string name="wrb05a"> شادی شدہ </string>
    <string name="wrb05b"> بیوہ / رنڈوہ </string>
    <string name="wrb05c"> طلاق یافتہ </string>
    <string name="wrb05d">  الگ رہتا/ رہتی ہو  </string>
    <string name="wrb05e">کنوارہ/کنواری </string>
    <string name="wrb06"> تعلیمی معیار </string>
    <string name="educodes"> تعلیمی معیار کے لئے کوڈ </string>
    <string name="wrb06a"> نہیں </string>
    <string name="wrb06b"> پرائمری </string>
    <string name="wrb06c"> مڈل پاس </string>
    <string name="wrb06d"> سیکنڈری </string>
    <string name="wrb06e"> انٹرمیڈیٹ </string>
    <string name="wrb06f"> گریجویشن </string>
    <string name="wrb06g"> ماسٹرز </string>
    <string name="wrb06h"> ایم فل / پی ایچ ڈی </string>
    <string name="wrb07"> پیشہ </string>
    <string name="occcodes"> پیشے کے لئے کوڈز </string>
    <string name="wrb07a"> قابل اطلاق نہیں </string>
    <string name="wrb07b"> گھریلو عورت </string>
    <string name="wrb07c"> ڈاکٹر / انجینئر / ماسٹر / مینیجر وغیرہ </string>
    <string name="wrb07d"> کلرک / ٹیکنیکل </string>
    <string name="wrb07e"> سیلز اور سروسز </string>
    <string name="wrb07f"> ہنر مند مزدور </string>
    <string name="wrb07g"> غیر ہنر مند مزدور </string>
    <string name="wrb07h"> زراعت </string>
    <string name="wrb07i"> کاروبار </string>
    <string name="wrb07j"> شاگرد </string>
    <string name="wrb07k"> بیروز گار </string>
    <string name="wrcheading"> حاملہ خواتین کی معلومات  </string>
    <string name="wrc00">serial number</string>
    <string name="wrc01"> حاملہ عورت کا شناختی نمبر </string>
    <string name="wrc02"> حاملہ عورت کانام </string>
    <string name="wrc03"> حاملہ عورت کے شوہر کا نام </string>
    <string name="wrc04"> اندراج کے وقت عمر </string>
    <string name="wrc04a"> سال </string>
    <string name="wrc05"> آپ کے حمل کوکتنا عرصہ ہوا ہے؟ </string>
    <string name="wrc05m"> مہینے </string>
    <string name="wrc05d"> دن </string>
    <string name="wrc06"> آپ کی آخری ماہواری کی تاریخ کیا تھی؟ </string>
    <string name="wrc07"> زچگی کی تاریخ (متوقع) </string>
    <string name="wrc08"> داخلہ کی تاریخ </string>
    <string name="wrdheading"> تولیدی  عمر اور حمل کے دوران کئے گئے طبی معائنے کی معلومات </string>
    <string name="wrd01"> اب تک کل حمل کی تعداد (بشمول موجودہ حمل) </string>
    <string name="wrd01a"> تعداد </string>
    <string name="wrd02"> اب تک کل زندہ پیدائشوں کی تعداد ؟ </string>
    <string name="wrd02a"> تعداد </string>
    <string name="wrd03"> کیا آپ نے موجودہ حمل کے دوران اپنا معائنہ کروایا تھا ؟ </string>
    <string name="wrd04"> کس سے معائنہ کروایا تھا؟ اسکے علاوہ کسی اور سے معائنہ کروایا تھا ؟ </string>
    <string name="wrd04sub"> صحت کے ذمہ دار </string>
    <string name="wrd04a"> ڈاکٹر </string>
    <string name="wrd04b"> نرس/ مڈوائف / لیڈی ہیلتھ وزیٹر </string>
    <string name="wrd04c"> کمیونٹی مڈ وائف </string>
    <string name="wrd04sub1"> دیگر افراد </string>
    <string name="wrd04d"> دائی/ٹی بی اے </string>
    <string name="wrd04e"> لیڈی ہیلتھ ورکر </string>
    <string name="wrd04f"> ہومیوپیتھک </string>
    <string name="wrd04g"> حکیم </string>
    <string name="wrd04h"> ڈسپینسر/کمپوڈر </string>
    <string name="wrd05"> آپ نے اس حمل کا معائنہ کہاں سے کروایا تھا؟ کہیں اور؟ </string>
    <string name="wrd05a"> گھر </string>
    <string name="wrd05b"> گورنمنٹ مرکز صحت </string>
    <string name="wrd05c"> پرائیوٹ مرکز صحت </string>
    <string name="wrd05d"> ہومیوپیتھک / حکیم </string>
    <string name="wrd06"> حمل کتنے مہینے کا تھا جب آپ نے موجودہ حمل کے دوران پہلی دفعہ معائنہ کروایا تھا ؟ </string>
    <string name="wrd06a"> مہینے </string>
    <string name="wrd07"> آپ نے موجودہ حمل کے دوران کتنی مرتبہ اپنا معائنہ کروایا تھا ؟ </string>
    <string name="wrd07a"> کتنی دفعہ </string>
    <string name="wrd08"> حمل کے معائنے کے دوران ان میں سے کم سے کم کوئی ایک ٹیسٹ کروایا تھا ؟ </string>
    <string name="wrd08a"> بلڈ پریشر </string>
    <string name="wrgheading">حاملہ خاتون کے لئے کم سے کم غذائی تنوع </string>
    <string name="wrgsub"> براہ مہربانی کھانے کی اشیاہ(کھانے اور ہلکی غذائیں) جو کہ کل دن یا رات کے دوران گھر میں یا گھر سے باہر کھایا یا پیا وضاحت کریں ۔صبح سویرے جو پہلی غذا یا یا مشروب کھایا پیا اس سے شروع کریں ۔
اوپر دیئے ہوئے کھانے یا پینے کے بارے میں لکھیں ۔اجزاہ کی فہرست میں سے پوچھیں جن میں کھانے اور پینے والی اجزا ہ کا ذکر نہیں ہے ان کے بارے میں مزید تحقیقات کریں </string>
    <string name="wrg01"> اناج </string>
    <string name="wrg02"> سفید جڑوں اور نباتیات </string>
    <string name="wrg03"> دالیں </string>
    <string name="wrg04"> پھلی ، گرے دار میوے اور بیچ </string>
    <string name="wrg05"> دودھ اور دودھ کی مصنوعات </string>
    <string name="wrg06"> اعضاء کے گوشت </string>
    <string name="wrg07"> گوشت </string>
    <string name="wrg08"> مچھلی </string>
    <string name="wrg09"> انڈے </string>
    <string name="wrg10"> سبز پتوں والی سبزیاں </string>
    <string name="wrg11"> وٹا من اے سے بھر پور سبزیاں اور نباتیات (آلو پیاز) </string>
    <string name="wrg12"> وٹا من اے سے بھر پورپھل </string>
    <string name="wrg13"> دیگر سبزیاں </string>
    <string name="wrg14"> دیگر پھل </string>
    <string name="wrg15"> مصالحے ، مصالحہ جات </string>
    <string name="wrg16"> مشروبات </string>
    <string name="wrg17"> تیل اور چربی </string>
    <string name="wrg18"> مٹھائی </string>
    <string name="wrjheading">ہاتھ دہونے کی معلومات</string>
    <string name="wrj01"> براہ مہربانی وہ جگہ دیکھا ئیں جہاں آپ اور آپ کے گھروالے اکثر ہاتھ دھوتے ہیں؟ </string>
    <string name="wrj0101"> مشاہدہ کیا </string>
    <string name="wrj0102"> رہا یشی جگہ اور پلاٹ میں موجود نہیں </string>
    <string name="wrj0103"> دیکھنے کی اجازت نہیں </string>
    <string name="wrj0104"> کو ئی اور وجہ </string>
    <string name="wrj02"> ہاتھ دھونے کے لئے مخصوص جگہ پر پانی کی موجودگی کا مشاہدہ </string>
    <string name="wrjht">  مشاہدہ نہیں کیا </string>
    <string name="wrj0201"> پانی موجود ہے۔ </string>
    <string name="wrj0202"> پانی موجود نہیں ہے ۔ </string>
    <string name="wrj03"> نوٹ کریں صابن یا ڈٹرجنٹ ہاتھ دھونے کے لئے مخصوص جگہ پر موجود ہے یا نہیں۔ </string>
    <string name="wrj0301"> نہانے یا ہاتھ دھونے ولاے صاب </string>
    <string name="wrj0302"> ڈیٹرجن پاوڈریا پانی جیسی پیسٹ </string>
    <string name="wrj0303"> مائع یا پانی والا صابن </string>
    <string name="wrj0304"> خاک /مٹی/ریت </string>
    <string name="wrj04"> کیاآپ کے گھر میں ہاتھ دھونے کے لئے کوئی صابن یا ڈٹرجنٹ ہے؟ </string>
    <string name="wrj05"> اگرہاں تو کیا آپ مجھے دیکھا سکتے ہیں ؟ </string>
    <string name="wrj0501"> صابن </string>
    <string name="wrj0502"> ڈیٹرجنڈ/مائع/ پاوڈر </string>
    <string name="wrj0503"> مائع صابن </string>
    <string name="wrj0504"> مٹی/راکھ </string>
    <string name="wrj06"> کن حالات میں آپ صابن سے ہاتھ دھوتے ہو۔
یہ کھلا سوال ہے کوئی بھی جواب پڑھ کے نہیں سنانا ہے۔ہر سوال کےوقفے کے بعد بار بار دھرانا ہے جب تک جوابدہندہ سمجھیں کہ ان کے پاس کوئی اور جواب نہیں۔ </string>
    <string name="wrj0601"> کھانا تیار کرنے سے پہلے </string>
    <string name="wrj0602"> کھانا پکانے سے پہلے </string>
    <string name="wrj0603"> کھانا کھانے سے پہلے </string>
    <string name="wrj0604"> بچے کو کھانا کھلانے سے پہلے </string>
    <string name="wrj0605"> بچے کو ما ں کا دودھ پلانے سے پہلے </string>
    <string name="wrj0606"> بچے کی پاخانہ کی صفائی کے بعد </string>
    <string name="wrj0607"> بچے کی نیپی تبدیل کرنے کے بعد </string>
    <string name="wrj0608"> بچوں کی پاخانہ کی صفا ئی کے بعد </string>
    <string name="wrj0609"> لیٹرین استعمال کرنے کے بعد </string>
</resources>