<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.SectionJActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/wrjheading"
        android:textColor="@color/colorHeading"
        android:textSize="40sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/wrj01" />

            <RadioGroup
                android:id="@+id/wrj01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/wrj0101"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/wrj0101" />

                <!--<RadioButton
                    android:id="@+id/wrj0102"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/wrj0102" />-->

                <TextView
                    style="@style/helperText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wrjht" />


                <RadioButton
                    android:id="@+id/wrj0102"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/wrj0102" />

                <RadioButton
                    android:id="@+id/wrj0103"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/wrj0103" />

                <RadioButton
                    android:id="@+id/wrj0196"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/wrj0104" />

            </RadioGroup>

            <EditText
                android:id="@+id/wrj0196x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other"
                android:visibility="gone"

                />

            <LinearLayout
                android:id="@+id/fldGrpwrj02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/wrj02" />

                <RadioGroup
                    android:id="@+id/wrj02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/wrj0201"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0201" />

                    <RadioButton
                        android:id="@+id/wrj0202"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0202" />


                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/wrj03" />

                <RadioGroup
                    android:id="@+id/wrj03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/wrj0301"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0301" />

                    <RadioButton
                        android:id="@+id/wrj0302"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0302" />

                    <RadioButton
                        android:id="@+id/wrj0303"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0303" />

                    <RadioButton
                        android:id="@+id/wrj0304"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0304" />

                    <RadioButton
                        android:id="@+id/wrj0305"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/none" />


                </RadioGroup>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/wrj04" />

            <RadioGroup
                android:id="@+id/wrj04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/wrj0401"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/wrj0402"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/no" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/fldGrpwrj05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/wrj05" />

                <RadioGroup
                    android:id="@+id/wrj05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/wrj0501"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0501" />

                    <RadioButton
                        android:id="@+id/wrj0502"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0502" />

                    <RadioButton
                        android:id="@+id/wrj0503"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0503" />

                    <RadioButton
                        android:id="@+id/wrj0504"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/wrj0504" />

                    <RadioButton
                        android:id="@+id/wrj0505"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/none" />

                </RadioGroup>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/wrj06" />


            <CheckBox
                android:id="@+id/wrj0601"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0601" />

            <CheckBox
                android:id="@+id/wrj0602"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0602" />

            <CheckBox
                android:id="@+id/wrj0603"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0603" />

            <CheckBox
                android:id="@+id/wrj0604"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0604" />

            <CheckBox
                android:id="@+id/wrj0605"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0605" />

            <CheckBox
                android:id="@+id/wrj0606"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0606" />

            <CheckBox
                android:id="@+id/wrj0607"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0607" />

            <CheckBox
                android:id="@+id/wrj0608"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0608" />

            <CheckBox
                android:id="@+id/wrj0609"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrj0609" />

            <CheckBox
                android:id="@+id/wrj0696"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/other" />

            <EditText
                android:id="@+id/wrj0696x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:hint="@string/other"
                android:visibility="gone" />

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNext"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#1ed61e"
                    android:text="@string/nextSection"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnEnd"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:text="@string/end_interview"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>