<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="edu.aku.hassannaqvi.wfp_recruit_form.ui.SectionGActivity">

<data>

    <import type="android.view.View" />

    <variable
        name="callback"
        type="edu.aku.hassannaqvi.wfp_recruit_form.ui.SectionGActivity" />
</data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layoutDirection="ltr"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/wrgheading"
            android:textColor="@color/colorHeading"
            android:textSize="40sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/wrgsub"
            android:textColor="@color/colorHeading"
            android:textSize="40sp" />
        <!--01-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/pink_100"
            android:text="@string/wrg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />
        <LinearLayout
            android:id="@+id/wrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <CheckBox
                android:id="@+id/wrg01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg01" />

            <CheckBox
                android:id="@+id/wrg02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg02" />
            <CheckBox
                android:id="@+id/wrg03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg03" />
            <CheckBox
                android:id="@+id/wrg04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg04" />
            <CheckBox
                android:id="@+id/wrg05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg05" />
            <CheckBox
                android:id="@+id/wrg06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg06" />
            <CheckBox
                android:id="@+id/wrg07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg07" />
            <CheckBox
                android:id="@+id/wrg08"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg08" />
            <CheckBox
                android:id="@+id/wrg09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg09" />
            <CheckBox
                android:id="@+id/wrg10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg10" />
            <CheckBox
                android:id="@+id/wrg11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg11" />
            <CheckBox
                android:id="@+id/wrg12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg12" />
            <CheckBox
                android:id="@+id/wrg13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg13" />
            <CheckBox
                android:id="@+id/wrg14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg14" />
            <CheckBox
                android:id="@+id/wrg15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg15" />
            <CheckBox
                android:id="@+id/wrg16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg16" />
            <CheckBox
                android:id="@+id/wrg17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg17" />
            <CheckBox
                android:id="@+id/wrg18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/wrg18" />


        </LinearLayout>
        <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Continue"
                style="@style/buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1ed61e"
                android:onClick="@{() -> callback.BtnContinue()}"
                android:text="@string/nextSection"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_End"
                style="@style/buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:onClick="@{() -> callback.BtnEnd()}"
                android:text="@string/end_interview"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>
